--- a/css/editor.css
+++ b/css/editor.css
@@ -6,3 +6,13 @@
     padding: 10px;
     font-size: 25px;
   }
+
+  #toast {
+    position: fixed;
+    top:85%;
+    left: 10%;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 10px;
+    font-size: 20px;
+  }
